compiler/testData/diagnostics/tests/deparenthesize/ParenthesizedVariable.fir.kt
fun test() {
    (<!REDUNDANT_LABEL_WARNING!>d@<!> val bar = 2)
}
